cluster/homelab/apps/whoogle/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: whoogle
    namespace: whoogle
    annotations:
        kubernetes.io/ingress.class: "nginx"
        gethomepage.dev/enabled: "true"
        gethomepage.dev/description: Self-Hosted Google
        gethomepage.dev/group: Tools
        gethomepage.dev/icon: whooglesearch
        gethomepage.dev/name: Whoogle
